# keras-surgeon

./: .gitignore  <√π.travis.yml>  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conda_gpu_py36.yml  pyproject.toml  setup.py  tf-keras-surgeon.pyproj  tf-keras-surgeon.sln  tox.ini
.github/workflows/: CI.yml
docs/: conf.py
src/kerasprune/: examples.py  identify.py  model_utils.py  prune.py  utils.py
src/kerasprune/examples/: lenet_mnist.py
src/kerassurgeon/: __init__.py  identify.py  operations.py  prune.py  surgeon.py  utils.py
src/kerassurgeon/_utils/: layer.py  node.py  tensor_dict.py
src/kerassurgeon/examples/: inception_flowers_prune.py  inception_flowers_tune.py  lenet_mnist.py  test_surgeon.py
src/tfkerassurgeon/: __init__.py  identify.py  operations.py  surgeon.py  utils.py
src/tfkerassurgeon/examples/: inception_flowers_prune.py  inception_flowers_tune.py  lenet_mnist.py
tests/: conftest.py  prune_test.py  test_surgeon.py  test_utils.py
